--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Order", "Index", "NewOrder")</li>
+                    <li>@Html.ActionLink("Create Order", "Index", "NewOrder")</li>
                     <li>@Html.ActionLink("Inventory", "Index", "Products")</li>
                     <li>@Html.ActionLink("Customers", "Index", "Registration")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
